--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-#
 /*========== General styling========== */
 
 *,
@@ -12,15 +11,27 @@ html,
 body {
   scroll-behavior: smooth;
   background-color: #ffffff;
-  position: relative;
 }
 html {
   overflow-x: hidden;
 }
+html,
 body {
-  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+body {
+  /* overflow:hidden; */
   width: 100%;
-  overflow-x: hidden;
+}
+.c-scrollbar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 11px;
+  height: 100vh;
+  transform-origin: center right;
+  opacity: 1;
 }
 h1,
 h2,
